// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render any field if component type is not matched 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c3 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  color: #ffffff;
  background: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 .sc-AxgMl * {
  fill: #ffffff;
}

.c3:hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c3:disabled {
  box-shadow: none;
  color: #98A7B7;
  background: #dfe4e9;
}

.c3 .sc-AxgMl + .c4 {
  margin-left: 0.8rem;
}

.c3 .c4 + .sc-AxgMl {
  margin-left: 0.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/-1;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <button
        class="c3"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c4 c5"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly with initial state 1`] = `
.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c57 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c67 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c29 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c29 * {
  fill-opacity: 1;
  fill: #607890;
}

.c49 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c49 * {
  fill-opacity: 1;
  fill: #607890;
}

.c55 {
  font-size: 2.0rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c55 * {
  fill-opacity: 1;
  fill: #607890;
}

.c66 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  color: #ffffff;
  background: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c66:hover {
  cursor: pointer;
}

.c66:focus {
  outline: none;
}

.c66:disabled {
  cursor: not-allowed;
}

.c66 .c28 * {
  fill: #ffffff;
}

.c66:hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c66:disabled {
  box-shadow: none;
  color: #98A7B7;
  background: #dfe4e9;
}

.c66 .c28 + .c17 {
  margin-left: 0.8rem;
}

.c66 .c17 + .c28 {
  margin-left: 0.8rem;
}

.c13 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c13::after {
  color: red;
  content: ' *';
}

.c21 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c25 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 0.8rem;
  cursor: pointer;
}

.c64 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: pointer;
}

.c23 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c14 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c19 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c12 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c12 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c20 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c20 .c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c24 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c35 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c35 .c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c63 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) max-content;
  grid-template-areas: 'label field' 'random description';
}

.c63 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c26 {
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c27 {
  opacity: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0;
  cursor: pointer;
}

.c27 + .c28 {
  z-index: 1;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c27:focus {
  outline: none;
}

.c27:disabled {
  cursor: not-allowed;
}

.c27:checked + .c28 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c54 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid #F38037;
  background-color: #F38037;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c54:focus {
  outline: none;
}

.c54 .c28 * {
  fill: #ffffff;
}

.c54 .c17 + .c28 {
  cursor: pointer;
  margin-left: 10px;
}

.c8 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c8::after {
  content: ' *';
}

.c51 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c4 .c7 {
  color: #566c82;
}

.c4 .sc-fznWqX,
.c4 .c50 {
  color: #566c82;
}

.c4 .sc-fznWqX *,
.c4 .c50 * {
  fill: #566c82;
}

.c4 ~ .sc-fznxsB {
  color: #566c82;
}

.c4::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover::after,
.c4:focus-within::after {
  height: 0.2rem;
}

.c4:focus-within,
.c4:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c4:focus-within::after,
.c4:focus-within:hover::after {
  background-color: #005AEE;
}

.c4:focus-within .c7,
.c4:focus-within:hover .c7 {
  color: #005AEE;
}

.c4:focus-within .sc-fznWqX,
.c4:focus-within:hover .sc-fznWqX,
.c4:focus-within .c50,
.c4:focus-within:hover .c50 {
  color: #005AEE;
}

.c4:focus-within .sc-fznWqX *,
.c4:focus-within:hover .sc-fznWqX *,
.c4:focus-within .c50 *,
.c4:focus-within:hover .c50 * {
  fill: #005AEE;
}

.c4:focus-within input::-webkit-input-placeholder,
.c4:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::-moz-placeholder,
.c4:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input:-ms-input-placeholder,
.c4:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::placeholder,
.c4:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c48 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c6 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c6:focus {
  outline: none;
}

.c6:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c6:focus::-moz-placeholder {
  opacity: 1;
}

.c6:focus:-ms-input-placeholder {
  opacity: 1;
}

.c6:focus::placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:not(:placeholder-shown) + .c7,
.c6:focus + .c7 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c47 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c47 .c2 {
  margin: 0;
  caret-color: transparent;
}

.c47 .c2 label {
  pointer-events: none;
}

.c47 .c2 div,
.c47 .c2 input,
.c47 .c2 label {
  cursor: pointer;
}

.c47 .c2 .c50 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c47 .c2 .c50 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c47 .c2:not(:focus-within):hover .c50 * {
  fill: #13181D;
}

.c34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c34 .sc-fznMAR {
  top: calc(100% + 5px);
  left: 0%;
}

.c52 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c52 .sc-fznMAR {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c36 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c36.c36.c36 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36:focus-within {
  border-color: #012040;
}

.c36 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c37 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c37::-webkit-input-placeholder {
  color: #98A7B7;
}

.c37::-moz-placeholder {
  color: #98A7B7;
}

.c37:-ms-input-placeholder {
  color: #98A7B7;
}

.c37::placeholder {
  color: #98A7B7;
}

.c37::-webkit-file-upload-button {
  visibility: hidden;
}

.c38 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c46 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c42 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c43 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c43::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c43::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c43:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c40 {
  box-sizing: border-box;
  position: relative;
}

.c45 {
  color: #BCBEC0;
  opacity: 1;
}

.c41 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c39 > div:first-child div {
  z-index: 5;
}

.c39 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c39 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c39 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c39 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c39 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c39 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c39 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c39 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c39 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c39 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c39 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c39 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c16 {
  width: 1px;
  opacity: 0;
}

.c15 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:focus {
  border-color: #012040;
  outline: 0;
}

.c53 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c53 * {
  cursor: pointer;
}

.c53 .c11 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c53 .c11 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c53:focus-within {
  border-color: #012040;
}

.c56 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c33 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c31:checked ~ .c32 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

.c30 {
  width: 16px;
  height: 16px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c65 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c65 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/7;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c9 {
  grid-column: 7/-1;
}

.c9 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c10 {
  grid-column: 1/-1;
}

.c10 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c60 {
  grid-column: 1/5;
}

.c60 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c61 {
  grid-column: 5/9;
}

.c61 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c62 {
  grid-column: 9/-1;
}

.c62 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c58 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c59 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c6"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value="first name"
            />
            <label
              class="c7 c8"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c6"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value="last name"
            />
            <label
              class="c7 c8"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="email-helper-text"
              class="c6"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value="email@email.com"
            />
            <label
              class="c7 c8"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="resume-field"
      >
        <label
          class="c13 c14"
          required=""
        >
          Resume
        </label>
        <label
          class="c15"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c16"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c17 c18 c19"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c20"
        id="Languages-checkboxGroup"
      >
        <label
          class="c21 c14"
        >
          Languages
        </label>
        <div
          class="c22 c23"
        >
          <div
            class="c11 c24"
            id="JAVA-checkbox"
          >
            <label
              class="c25 c14"
              for="JAVA"
            >
              JAVA
            </label>
            <div
              class="c26"
            >
              <input
                checked=""
                class="c27"
                id="JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c28 c29"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
                  stroke="#000"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <div
            class="c11 c24"
            id="RUBY-checkbox"
          >
            <label
              class="c25 c14"
              for="RUBY"
            >
              RUBY
            </label>
            <div
              class="c26"
            >
              <input
                class="c27"
                id="RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c28 c29"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
                  stroke="#000"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c20"
        id="Role-radioGroup"
      >
        <label
          class="c21 c14"
        >
          Role
        </label>
        <div
          class="c22 c23"
        >
          <div
            class="c11 c24"
            id="Front End-radio"
          >
            <label
              class="c25 c14"
              for="Front End"
            >
              Front End
            </label>
            <div
              class="c30"
            >
              <input
                checked=""
                class="c31"
                id="Front End"
                name="role"
                type="radio"
                value="front-end"
              />
              <div
                class="c32 c33"
              />
            </div>
          </div>
          <div
            class="c11 c24"
            id="Back End-radio"
          >
            <label
              class="c25 c14"
              for="Back End"
            >
              Back End
            </label>
            <div
              class="c30"
            >
              <input
                class="c31"
                id="Back End"
                name="role"
                type="radio"
                value="back-end"
              />
              <div
                class="c32 c33"
              />
            </div>
          </div>
          <div
            class="c11 c24"
            id="Full Stack-radio"
          >
            <label
              class="c25 c14"
              for="Full Stack"
            >
              Full Stack
            </label>
            <div
              class="c30"
            >
              <input
                class="c31"
                id="Full Stack"
                name="role"
                type="radio"
                value="full-stack"
              />
              <div
                class="c32 c33"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="birthDate"
      >
        <label
          class="c21 c14"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c34"
          id="medly-popover-wrapper"
        >
          <div
            class="c11 c35"
            id="birthDate-input-field"
          >
            
            <div
              class="c22 c36"
            >
              <input
                autocomplete="off"
                class="c37 c38"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value="01/01/2019"
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
      >
        <label
          class="c21 c14"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c39"
          data-testid="react-datepicker"
        >
          <div
            class="c40"
          >
            <div
              class="sc-fzoant c41"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c42"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c43"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value="01/01/2019"
                  width="100%"
                />
              </label>
              <div
                class="c44"
              >
                <svg
                  class="c45"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c42"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c43"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value="01/02/2019"
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c46"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c47"
      >
        <div
          class="c2 c48"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c6"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value="India"
              />
              <label
                class="c7 c8"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c28 c49 c50 c51"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="graduation-field"
      >
        <label
          class="c21 c14"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c52"
          id="medly-popover-wrapper"
        >
          <div
            class="c53"
            id="graduation-container"
          >
            <button
              class="c54"
            >
              <span
                class="c17 c18"
              >
                BTech
              </span>
              <svg
                class="c28 c55"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
            <div
              class="c11 c35"
              id="graduation-input-field"
            >
              
              <div
                class="c22 c36"
              >
                <input
                  autocomplete="off"
                  class="c37"
                  id="graduation-input"
                  placeholder="1 options selected"
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c28 c29 c56"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c17 c57 c58"
    >
      Marks
    </h4>
    <span
      class="c17 c18 c59"
    >
      Marks Information
    </span>
    <div
      class="c60"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c6"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c61"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c6"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c62"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c6"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c63"
        id="Do you Agree-checkbox"
      >
        <label
          class="c64 c14"
          for="agree"
        >
          Do you Agree
        </label>
        <div
          class="c26"
        >
          <input
            checked=""
            class="c27"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c28 c29"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
              stroke="#000"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c65"
    >
      <button
        class="c66"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c17 c67"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly without initial state 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 3.2rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 4.0rem;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c20 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c57 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c67 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c31 {
  font-size: 2.4rem;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c31 * {
  fill-opacity: 1;
  fill: #607890;
}

.c51 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c51 * {
  fill-opacity: 1;
  fill: #607890;
}

.c66 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  color: #ffffff;
  background: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c66:hover {
  cursor: pointer;
}

.c66:focus {
  outline: none;
}

.c66:disabled {
  cursor: not-allowed;
}

.c66 .c30 * {
  fill: #ffffff;
}

.c66:hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c66:disabled {
  box-shadow: none;
  color: #98A7B7;
  background: #dfe4e9;
}

.c66 .c30 + .c1 {
  margin-left: 0.8rem;
}

.c66 .c1 + .c30 {
  margin-left: 0.8rem;
}

.c16 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c16::after {
  color: red;
  content: ' *';
}

.c23 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c27 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 0.8rem;
  cursor: pointer;
}

.c64 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: pointer;
}

.c25 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c17 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c21 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c15 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c15 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c22 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c22 .c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c26 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c26 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c37 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c37 .c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c63 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) max-content;
  grid-template-areas: 'label field' 'random description';
}

.c63 .c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c28 {
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c29 {
  opacity: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  margin: 0;
  cursor: pointer;
}

.c29 + .c30 {
  z-index: 1;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.c29:focus {
  outline: none;
}

.c29:disabled {
  cursor: not-allowed;
}

.c29:checked + .c30 {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c11 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c11::after {
  content: ' *';
}

.c53 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c7 .c10 {
  color: #566c82;
}

.c7 .sc-fznWqX,
.c7 .c52 {
  color: #566c82;
}

.c7 .sc-fznWqX *,
.c7 .c52 * {
  fill: #566c82;
}

.c7 ~ .sc-fznxsB {
  color: #566c82;
}

.c7::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c7:hover::after,
.c7:focus-within::after {
  height: 0.2rem;
}

.c7:focus-within,
.c7:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c7:focus-within::after,
.c7:focus-within:hover::after {
  background-color: #005AEE;
}

.c7:focus-within .c10,
.c7:focus-within:hover .c10 {
  color: #005AEE;
}

.c7:focus-within .sc-fznWqX,
.c7:focus-within:hover .sc-fznWqX,
.c7:focus-within .c52,
.c7:focus-within:hover .c52 {
  color: #005AEE;
}

.c7:focus-within .sc-fznWqX *,
.c7:focus-within:hover .sc-fznWqX *,
.c7:focus-within .c52 *,
.c7:focus-within:hover .c52 * {
  fill: #005AEE;
}

.c7:focus-within input::-webkit-input-placeholder,
.c7:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::-moz-placeholder,
.c7:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input:-ms-input-placeholder,
.c7:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::placeholder,
.c7:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c6 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c50 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c9 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c9:focus {
  outline: none;
}

.c9:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c9:focus::-moz-placeholder {
  opacity: 1;
}

.c9:focus:-ms-input-placeholder {
  opacity: 1;
}

.c9:focus::placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:not(:placeholder-shown) + .c10,
.c9:focus + .c10 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c49 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c49 .c5 {
  margin: 0;
  caret-color: transparent;
}

.c49 .c5 label {
  pointer-events: none;
}

.c49 .c5 div,
.c49 .c5 input,
.c49 .c5 label {
  cursor: pointer;
}

.c49 .c5 .c52 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c49 .c5 .c52 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c49 .c5:not(:focus-within):hover .c52 * {
  fill: #13181D;
}

.c36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c36 .sc-fznMAR {
  top: calc(100% + 5px);
  left: 0%;
}

.c54 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c54 .sc-fznMAR {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c38 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c38.c38.c38 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38:focus-within {
  border-color: #012040;
}

.c38 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c39 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c39::-webkit-input-placeholder {
  color: #98A7B7;
}

.c39::-moz-placeholder {
  color: #98A7B7;
}

.c39:-ms-input-placeholder {
  color: #98A7B7;
}

.c39::placeholder {
  color: #98A7B7;
}

.c39::-webkit-file-upload-button {
  visibility: hidden;
}

.c40 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c48 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c44 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c45 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c45::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c45::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c45:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c42 {
  box-sizing: border-box;
  position: relative;
}

.c47 {
  color: #BCBEC0;
  opacity: 1;
}

.c43 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c41 > div:first-child div {
  z-index: 5;
}

.c41 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c41 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c41 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c41 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c41 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c41 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c41 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c41 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c41 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c41 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c41 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c41 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c19 {
  width: 1px;
  opacity: 0;
}

.c18 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18:focus {
  border-color: #012040;
  outline: 0;
}

.c55 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c55 * {
  cursor: pointer;
}

.c55 .c14 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c55 .c14 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c55:focus-within {
  border-color: #012040;
}

.c56 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c35 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c33:checked ~ .c34 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

.c32 {
  width: 16px;
  height: 16px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c65 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c65 > * + * {
  margin-left: 1.6rem;
}

.c4 {
  grid-column: 1/7;
}

.c4 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c12 {
  grid-column: 7/-1;
}

.c12 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c13 {
  grid-column: 1/-1;
}

.c13 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c60 {
  grid-column: 1/5;
}

.c60 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c61 {
  grid-column: 5/9;
}

.c61 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c62 {
  grid-column: 9/-1;
}

.c62 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c58 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c59 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: grid;
  width: 100%;
  min-width: 300px;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <h2
      class="c1 c2"
    >
      Dummy Form
    </h2>
    <span
      class="c1 c3"
    >
      Dummy Description
    </span>
    <div
      class="c4"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c9"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c9"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="email-helper-text"
              class="c9"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value=""
            />
            <label
              class="c10 c11"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="resume-field"
      >
        <label
          class="c16 c17"
          required=""
        >
          Resume
        </label>
        <label
          class="c18"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c19"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c1 c20 c21"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c22"
        id="Languages-checkboxGroup"
      >
        <label
          class="c23 c17"
        >
          Languages
        </label>
        <div
          class="c24 c25"
        >
          <div
            class="c14 c26"
            id="JAVA-checkbox"
          >
            <label
              class="c27 c17"
              for="JAVA"
            >
              JAVA
            </label>
            <div
              class="c28"
            >
              <input
                class="c29"
                id="JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c30 c31"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
                  stroke="#000"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <div
            class="c14 c26"
            id="RUBY-checkbox"
          >
            <label
              class="c27 c17"
              for="RUBY"
            >
              RUBY
            </label>
            <div
              class="c28"
            >
              <input
                class="c29"
                id="RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c30 c31"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
                  stroke="#000"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c22"
        id="Role-radioGroup"
      >
        <label
          class="c23 c17"
        >
          Role
        </label>
        <div
          class="c24 c25"
        >
          <div
            class="c14 c26"
            id="Front End-radio"
          >
            <label
              class="c27 c17"
              for="Front End"
            >
              Front End
            </label>
            <div
              class="c32"
            >
              <input
                class="c33"
                id="Front End"
                name="role"
                type="radio"
                value="front-end"
              />
              <div
                class="c34 c35"
              />
            </div>
          </div>
          <div
            class="c14 c26"
            id="Back End-radio"
          >
            <label
              class="c27 c17"
              for="Back End"
            >
              Back End
            </label>
            <div
              class="c32"
            >
              <input
                class="c33"
                id="Back End"
                name="role"
                type="radio"
                value="back-end"
              />
              <div
                class="c34 c35"
              />
            </div>
          </div>
          <div
            class="c14 c26"
            id="Full Stack-radio"
          >
            <label
              class="c27 c17"
              for="Full Stack"
            >
              Full Stack
            </label>
            <div
              class="c32"
            >
              <input
                class="c33"
                id="Full Stack"
                name="role"
                type="radio"
                value="full-stack"
              />
              <div
                class="c34 c35"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="birthDate"
      >
        <label
          class="c23 c17"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c36"
          id="medly-popover-wrapper"
        >
          <div
            class="c14 c37"
            id="birthDate-input-field"
          >
            
            <div
              class="c24 c38"
            >
              <input
                autocomplete="off"
                class="c39 c40"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value=""
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
      >
        <label
          class="c23 c17"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c41"
          data-testid="react-datepicker"
        >
          <div
            class="c42"
          >
            <div
              class="sc-fzoant c43"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c44"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c45"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
              <div
                class="c46"
              >
                <svg
                  class="c47"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c44"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c45"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c48"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c49"
      >
        <div
          class="c5 c50"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c9"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
              />
              <label
                class="c10 c11"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c30 c51 c52 c53"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="graduation-field"
      >
        <label
          class="c23 c17"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c54"
          id="medly-popover-wrapper"
        >
          <div
            class="c55"
            id="graduation-container"
          >
            <div
              class="c14 c37"
              id="graduation-input-field"
            >
              
              <div
                class="c24 c38"
              >
                <input
                  autocomplete="off"
                  class="c39"
                  id="graduation-input"
                  placeholder="Please Select . . ."
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c30 c31 c56"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c1 c57 c58"
    >
      Marks
    </h4>
    <span
      class="c1 c20 c59"
    >
      Marks Information
    </span>
    <div
      class="c60"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c9"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c61"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c9"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c62"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c9"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c63"
        id="Do you Agree-checkbox"
      >
        <label
          class="c64 c17"
          for="agree"
        >
          Do you Agree
        </label>
        <div
          class="c28"
        >
          <input
            class="c29"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c30 c31"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.911 12.814l4.243 4.242M9.154 17.056l9.899-9.899"
              stroke="#000"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="c65"
    >
      <button
        class="c66"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c1 c67"
        >
          Upload
        </span>
      </button>
    </div>
  </form>
</div>
`;
